_sass/about.scss
#about-header {
  .ham-menu {
    display: block;
  }
}
#container-about {
  margin: 0 auto;
  #header-about {
    margin-top: -3%;
    background-image: url(../images/about/fs-bg.jpg);
    background-size: cover;
    width: 100%;

    img.image-left {
      display: inline-block;
      width: 100%;
    }

    .mobile-bg-hide {
      display: none;
    }

    .header-image {
      width: 40%;
    }
  }

  .rounded-red-button {
    border-radius: 500px;
    margin-top: 22px;
    font-weight: 500;
    font-size: .7em;
    color: $primary-color-darker-darker;
    border-color: $primary-color-darker-darker;
    border-style: solid;
    border-width: thin;
    padding: 5px 20px;
    text-transform: uppercase;
    text-decoration: none;
  }

  .view-listing-button {
    border-radius: 500px;
    color: white;
    border-style: solid;
    border-width: thin;
    margin-top: 4px;
    font-weight: 500;
    font-size: .6em;
    padding: 3px 18px;
  }

  .bio-pic-mobile {
    display: none;
  }

  .agent-details {
    @include modal;
    .content {
      position: relative;
      max-width: 1400px;
      background-color: white;
      width: 65vw;
      margin: 10vh auto 0 auto;
      font-size: 1.2em;
      .header {
        position: relative;
        margin-bottom: 5%;
        .bio-pic {
          position: absolute;
          left: -10px;
          height: 267px;
        }
        .contact {
          margin-left: 33%;
          display: inline-block;
          h4 {
            padding-top: 16px;
            font-weight: bold;
          }
          a {
            text-decoration: none;
          }
          .position {
            color: $primary-color;
          }
          .email {
            padding-top: 69px;
          }
          .secondary-contact {
            font-size: .7em;
            font-weight: bold;
          }
          > p {
            margin-top: 0;
            margin-bottom: 0;
            text-transform: uppercase;
            font-size: .85em;
            > a {
              text-decoration: underline;
            }
          }
          > h4 {
            color: #3e3e3e;
            font-weight: 100;
            font-size: 1.8em;
            margin-bottom: 0;
            margin-top: 12px;
          }
        }
      }
      .bio {
        margin: 0 31px;
        padding-bottom: 12px;
        color: black;
        opacity: .55;
        line-height: 110%;
        font-size: .9em;
        > h2 {
          font-size: 1.8em;
          opacity: 1;
          text-transform: uppercase;
          margin-bottom: 25px;
          margin-top: 0;
        }
      }
      .footer {
        background-color: $primary-color;
        color: white;
        text-align: center;
        padding: 1px 0 0 0;
        line-height: 1.5;
        > p {
          margin: 7px;
          font-size: 1.4em;
        }
        .featured-listings {
          width: 100%;
          height: 100%;
          margin: 0 auto;
          -js-display: flex;
          display: flex;
          justify-content: center;
          .agent-featured-listing {
            width: 33.33%;
            height: 140px;
            position: relative;
            background-image: url("/images/placeholder-thumbnail.jpg");
            background-size: cover;
            .view-listing-button {
              position: absolute;
              text-decoration: none;
              left: 24%;
              top: 54px;
            }
          }
        }
      }
    }
  }

  .about-text {
    -js-display: flex;
    display: flex;
    justify-content: space-between;
    padding: 5em 60px;
    position: relative;
    flex-direction: row;
    flex-flow: row wrap;
    margin: 0 auto;
    max-width: $page-max-width;

    width: 100%;
    max-width: $page-max-width;
    padding-top: 132px;
    margin: 0 auto;
    position: relative;
    .header-image {
      width: 47% !important;
      display: inline-block;
      vertical-align: bottom;
    }
  }

  .description {
    width: 47%;
    display: inline-block;
    text-align: left;
    vertical-align: middle;
    align-self: center;
    color: #858585;
    letter-spacing: .5px;

    > p {
      padding-top: 15px;
    }
    .head-title {
      @include header;
      span {
        font-weight: bold;
        color: $primary-color;
      }
    }
  }

  .agent-listing {
    display: inherit;
    position: relative;
  }
  .agents {
    // padding: 5em 60px;
    text-align: center;
    .flex-agents {
      justify-content: space-between;
      padding: 5em 60px;
    }
  }
  .agent {
    width: 23%;
    text-align: center;
    margin: .3em;
    box-shadow: 0px 0px 2em gainsboro;
    border: 1px solid #c7c7c7;
    .agent-info-bottom {
      margin-top: auto;
      padding-bottom: 4px;
      padding-top: 4px;
    }
    .bio-image {
      font-size: 1.4em;
      position: relative;
      > img {
        width: 100%;
      }
      .image-title {
        span {font-weight: bold;}
        color: white;
        position: absolute;
        bottom: 1em;
        text-align: left;
        margin-left: 1em
      }
    }
    .short-bio {
      margin: 1em 1em;
      padding: 28px 0 12px 0;
      text-align: left;
      font-size: .85em;
      height: 90px;
    }

    .bio-button {
      display: inline-block;
      color: $primary-color;
      border: 1px solid $primary-color;
      font-size: .9em;
      padding: 0.4em 1em;
      border-radius: 500px;
      margin-bottom: 1em;
      cursor: pointer;
    }
    .bio-contact {
      margin-bottom: 1em;
      font-size: .9em;
    }
  }

  .section-header {
    padding: 5% 1%;
    background: $primary-color;
    text-align: center;
    color: white;
    .title {
      max-width: $page-max-width;
      margin: 0 auto;
      font-weight: bold;
      font-size: 1.4em;
    }
  }

  .specialty {
    background: white;
    margin-top: 3em;
    background: white;
    width: 100%;
  }

  .section-content {
    margin-top: -3%;
    margin-bottom: 142px;
    .about {
      position: relative;
      margin: 0 auto;
      width: 874px;

      .about-pic {
        display: block;
        width: 100%;
      }
      .map {
        position: absolute;
        top: 418px;
        left: 575px;
        width: 400px;

      }
    }
  }

  @media screen and (max-width: $breakpoint-small) {
    .about-text {
      margin-bottom: -120px;
      padding: 5em 5px;
    }

    .description {
      padding-top: 0 !important;
    }

    .section-content {
      margin: 0;
      .about {
        width: 100%;
        .map {
          position: static;
          width: 100%;
        }
      }
    }

    .section-header {
      .title {
        font-size: 1em;
      }
    }
    .mobile-bg-hide {
      height: 0;
      overflow: hidden;
    }
    .ham-menu {
      background-size: 94%;
    }

    .agent {
      width: 44%;
    }

    .agents {
      padding: 1em;
      .flex-agents {
        padding: 5em 5px;
      }
      .short-bio {
        display: none;
      }
      .agent-info-bottom {
        .bio-contact {
          display: none;
        }
        .bio-button {
          font-size: .8em;
          margin-bottom: 0;
          margin-top: 14px;
        }
      }
    }

    #header-about {
      .header-image {
        display: none;
      }

      .description {
        width: 100%;
        padding: 115px 30px 0 30px;
        .head-title {
          text-align: center;
        }
      }
    }

    .agent {
      width: 43%;
    }

    .bio-pic-mobile {
      display: block;
      width: 88%;
      margin: 52px auto 0 auto;
    }

    .bio-pic {
      display: none;
    }

    .agent-details {
      overflow: scroll;
      background-color: white;
      .content {
        background-color: white;
        width: 100%;
        margin: 0;
        box-shadow: none;
        .header {
          margin-bottom: 5%;
          .bio-pic {
            display: none;
          }
          .contact {
            width: 100%;
            margin: 0 auto;
            text-align: center;
            margin-top: 25px;
            > h4 {
              color: black;
            }
          }
        }
        .bio {
          margin: 25px;
          padding: 0;
          color: black;
          opacity: .55;
          line-height: 110%;
          > h2 {
            opacity: 1;
          }
        }
        .footer {
          background-color: $primary-color;
          color: white;
          text-align: center;
          padding-top: 1px;
          .featured-listings {
            width: 100%;
            height: 100%;
            margin: 0;
            -js-display: flex;
            display: flex;
            flex-direction: row;
            flex-flow: row wrap;
            justify-content: center;
            .agent-featured-listing {
              width: 100%;
              .view-listing-button {
                left: 32%;
              }
            }
          }
        }
      }
    }
  }
}

